--- a/src/css/AllEvents.css
+++ b/src/css/AllEvents.css
@@ -4,3 +4,14 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
 input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
 input[type=search]::-ms-reveal { display: none; width : 0; height: 0; }
+
+/* .button-filter-backdrop{
+    -webkit-backdrop-filter: blur(17px);
+    backdrop-filter: blur(17px);
+    background-color: #ffffff1a;
+    border: 1px solid #ffffff26;
+    border-radius: 15px;
+    bottom: 0;
+    content: "";
+    z-index: 4;
+} */
