--- a/src/css/SingularClubs.css
+++ b/src/css/SingularClubs.css
@@ -85,19 +85,19 @@
   }
 }
 
-/* Base styling for the menu image container */
-.menu-image-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
+/* Base styles for menu images */
+.menu-image-container div {
+  display: block !important; /* Ensure that this is set so that the display can be toggled */
 }
 
-/* Media query for tablet screens */
+/* Media query for tablet screens and below */
 @media (max-width: 768px) {
-  .menu-image-container {
-    grid-template-columns: repeat(4, 1fr); /* Show 4 images in a row on tablet screens */
+  /* Hide all menu images starting from the fifth one */
+  .menu-image-container div:nth-of-type(n+5) {
+    display: none !important;
   }
 }
+
 
 @media (max-width: 768px) {
   .SCPVectorLeft{
