--- a/src/css/SingularClubs.css
+++ b/src/css/SingularClubs.css
@@ -85,6 +85,15 @@
   }
 }
 
+@media (max-width: 760px) {
+  .club-image-container{
+    top: 0px !important
+  }
+  .clubNameHeader{
+    font-size: 2rem !important;
+  }
+}
+
 /* Base styles for menu images */
 .menu-image-container div {
   display: block !important; /* Ensure that this is set so that the display can be toggled */
@@ -107,4 +116,3 @@
     right: -150px !important;
   }
 }
-
